[project]
name = "infiniteyou"
description = "An implementation of InfiniteYou for ComfyUI. Native support for [a/InfiniteYou](https://github.com/bytedance/InfiniteYou) in ComfyUI, designed by the ZenAI team."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["insightface", "onnxruntime", "huggingface_hub", "facexlib==0.3.0", "numpy==1.26.4", "opencv-python==4.11.0.86", "onnxruntime-gpu; sys_platform != 'darwin' and platform_machine == 'x86_64'"]

[project.urls]
Repository = "https://github.com/ZenAI-Vietnam/ComfyUI_InfiniteYou"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_InfiniteYou"
Icon = ""
